deploy: 6657241ca1a06349f0cfe802f5b2fc2078816ec3

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -653,13 +653,16 @@
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestBoralus.html" name="" title="QuestBoralus">QuestBoralus</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestSafeSea.html" name="" title="QuestSafeSea">QuestSafeSea</a>
+                              <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.html" name="" title="QuestEliminatePiracy">QuestEliminatePiracy</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html" name="" title="QuestTheramore">QuestTheramore</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.html" name="" title="QuestUnlockShip">QuestUnlockShip</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestWestfallOutpost.html" name="" title="QuestWestfallOutpost">QuestWestfallOutpost</a>
                           </li>
                     </ul>
                 </li>
@@ -753,6 +756,12 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html" name="" title="QuestRegroupCastaway">QuestRegroupCastaway</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestStranglethornOutpost.html" name="" title="QuestStranglethornOutpost">QuestStranglethornOutpost</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestZangarmarsh.html" name="" title="QuestZangarmarsh">QuestZangarmarsh</a>
                           </li>
                     </ul>
                 </li>
