deploy: dd80be757d0382f25e96fe50da7ca1a4c9416fd8

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -336,6 +336,9 @@
                           <li>
                               <a href="MacroTools.Cheats.TestMode.html" name="" title="TestMode">TestMode</a>
                           </li>
+                          <li>
+                              <a href="MacroTools.Cheats.Toggle.html" name="" title="Toggle">Toggle</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
