deploy: 8c3b35c7c62ab5661fee2b46feb7e9682c8371ee

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -890,9 +890,6 @@
                               <a href="WarcraftLegacies.Source.Rocks.RockGroup.html" name="" title="RockGroup">RockGroup</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Rocks.RockSetup.html" name="" title="RockSetup">RockSetup</a>
-                          </li>
-                          <li>
                               <a href="WarcraftLegacies.Source.Rocks.RockSystem.html" name="" title="RockSystem">RockSystem</a>
                           </li>
                     </ul>
@@ -985,6 +982,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.ResearchSetup.html" name="" title="ResearchSetup">ResearchSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.RockSetup.html" name="" title="RockSetup">RockSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.SharedFactionConfigSetup.html" name="" title="SharedFactionConfigSetup">SharedFactionConfigSetup</a>
