deploy: 28efeb38bc7e0390153e9e42c848f7419da3ca28

--- a/api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveLegendReachRect.html
+++ b/api-macroTools/MacroTools.ObjectiveSystem.Objectives.LegendBased.ObjectiveLegendReachRect.html
@@ -103,7 +103,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_ObjectiveSystem_Objectives_LegendBased_ObjectiveLegendReachRect_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class ObjectiveLegendReachRect : Objective</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class ObjectiveLegendReachRect : Objective</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
