--- a/api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveBuildInRect.html
+++ b/api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveBuildInRect.html
@@ -104,7 +104,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_ObjectiveSystem_Objectives_UnitBased_ObjectiveBuildInRect_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class ObjectiveBuildInRect : Objective</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class ObjectiveBuildInRect : Objective</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
