--- a/api-macroTools/MacroTools.Buffs.AscendancyBuff.html
+++ b/api-macroTools/MacroTools.Buffs.AscendancyBuff.html
@@ -84,7 +84,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_Buffs_AscendancyBuff_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class AscendancyBuff : PassiveBuff</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class AscendancyBuff : PassiveBuff</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
