--- a/api-macroTools/MacroTools.FactionSystem.PlayerFactionChangeEventArgs.html
+++ b/api-macroTools/MacroTools.FactionSystem.PlayerFactionChangeEventArgs.html
@@ -84,7 +84,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_FactionSystem_PlayerFactionChangeEventArgs_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class PlayerFactionChangeEventArgs : EventArgs</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class PlayerFactionChangeEventArgs : EventArgs</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
