--- a/api-macroTools/MacroTools.Frames.TextFrame.html
+++ b/api-macroTools/MacroTools.Frames.TextFrame.html
@@ -127,7 +127,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_Frames_TextFrame_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class TextFrame : Frame</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class TextFrame : Frame</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
