--- a/api-macroTools/MacroTools.ObjectiveSystem.Objectives.MetaBased.ObjectiveEitherOf.html
+++ b/api-macroTools/MacroTools.ObjectiveSystem.Objectives.MetaBased.ObjectiveEitherOf.html
@@ -103,7 +103,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_ObjectiveSystem_Objectives_MetaBased_ObjectiveEitherOf_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class ObjectiveEitherOf : Objective</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class ObjectiveEitherOf : Objective</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
