--- a/api-macroTools/MacroTools.ObjectiveSystem.Objectives.TimeBased.ObjectiveTime.html
+++ b/api-macroTools/MacroTools.ObjectiveSystem.Objectives.TimeBased.ObjectiveTime.html
@@ -106,7 +106,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_ObjectiveSystem_Objectives_TimeBased_ObjectiveTime_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class ObjectiveTime : Objective</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class ObjectiveTime : Objective</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
