--- a/api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveKillXUnit.html
+++ b/api-macroTools/MacroTools.ObjectiveSystem.Objectives.UnitBased.ObjectiveKillXUnit.html
@@ -107,7 +107,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_ObjectiveSystem_Objectives_UnitBased_ObjectiveKillXUnit_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class ObjectiveKillXUnit : Objective</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class ObjectiveKillXUnit : Objective</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
