--- a/api-macroTools/MacroTools.Powers.DummyPower.html
+++ b/api-macroTools/MacroTools.Powers.DummyPower.html
@@ -109,7 +109,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_Powers_DummyPower_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class DummyPower : Power</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class DummyPower : Power</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
