--- a/api-macroTools/MacroTools.Spells.ChannelAnySpell.html
+++ b/api-macroTools/MacroTools.Spells.ChannelAnySpell.html
@@ -103,7 +103,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_Spells_ChannelAnySpell_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class ChannelAnySpell : Spell</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class ChannelAnySpell : Spell</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
