deploy: 0e9432bd11b6cfa5e56616e269c99d5e22f31c58

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -250,10 +250,7 @@
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="MacroTools.Cheats.CheatAddRandomAugment.html" name="" title="CheatAddRandomAugment">CheatAddRandomAugment</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Cheats.CheatAugment.html" name="" title="CheatAugment">CheatAugment</a>
+                              <a href="MacroTools.Cheats.CheatAddSpell.html" name="" title="CheatAddSpell">CheatAddSpell</a>
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatBuild.html" name="" title="CheatBuild">CheatBuild</a>
@@ -275,9 +272,6 @@
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatGold.html" name="" title="CheatGold">CheatGold</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Cheats.CheatHasResearch.html" name="" title="CheatHasResearch">CheatHasResearch</a>
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatHp.html" name="" title="CheatHp">CheatHp</a>
@@ -307,6 +301,12 @@
                               <a href="MacroTools.Cheats.CheatRemove.html" name="" title="CheatRemove">CheatRemove</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Cheats.CheatResearchLevel.html" name="" title="CheatResearchLevel">CheatResearchLevel</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Cheats.CheatShowQuestNames.html" name="" title="CheatShowQuestNames">CheatShowQuestNames</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Cheats.CheatSpawn.html" name="" title="CheatSpawn">CheatSpawn</a>
                           </li>
                           <li>
@@ -320,9 +320,6 @@
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatVision.html" name="" title="CheatVision">CheatVision</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Cheats.CommandAddSpell.html" name="" title="CommandAddSpell">CommandAddSpell</a>
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CommandDestroy.html" name="" title="CommandDestroy">CommandDestroy</a>
