deploy: db73edd0b9f5a4b3ea359e039b8ff6bfcc63c80e

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -256,9 +256,6 @@
                               <a href="MacroTools.Cheats.CheatBuild.html" name="" title="CheatBuild">CheatBuild</a>
                           </li>
                           <li>
-                              <a href="MacroTools.Cheats.CheatCompleteQuest.html" name="" title="CheatCompleteQuest">CheatCompleteQuest</a>
-                          </li>
-                          <li>
                               <a href="MacroTools.Cheats.CheatControl.html" name="" title="CheatControl">CheatControl</a>
                           </li>
                           <li>
@@ -296,6 +293,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatOwner.html" name="" title="CheatOwner">CheatOwner</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Cheats.CheatQuestProgress.html" name="" title="CheatQuestProgress">CheatQuestProgress</a>
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatRemove.html" name="" title="CheatRemove">CheatRemove</a>
