deploy: 4a93a4423f5b497ac547cf42cb49fb0be3bb6617

--- a/api-macroTools/MacroTools.CommandSystem.CommandManager.html
+++ b/api-macroTools/MacroTools.CommandSystem.CommandManager.html
@@ -85,7 +85,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_CommandSystem_CommandManager_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static class CommandManager : object</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class CommandManager : object</code></pre>
   </div>
   <h3 id="methods">Methods
   </h3>
@@ -103,7 +103,7 @@
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static void Register(Command command)</code></pre>
+    <pre><code class="lang-csharp hljs">public void Register(Command command)</code></pre>
   </div>
   <h5 class="parameters">Parameters</h5>
   <table class="table table-bordered table-striped table-condensed">
