deploy: dba86a2772638c7786d8658c6d23d10c2b9e4de8

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -348,9 +348,6 @@
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.QuestBlackrookHold.html" name="" title="QuestBlackrookHold">QuestBlackrookHold</a>
-                          </li>
-                          <li>
                               <a href="WarcraftLegacies.Source.Quests.QuestBookOfMedivh.html" name="" title="QuestBookOfMedivh">QuestBookOfMedivh</a>
                           </li>
                           <li>
@@ -655,6 +652,9 @@
                     <a href="WarcraftLegacies.Source.Quests.Naga.html" name="" title="WarcraftLegacies.Source.Quests.Naga">WarcraftLegacies.Source.Quests.Naga</a>
                     
                     <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestBlackrookHold.html" name="" title="QuestBlackrookHold">QuestBlackrookHold</a>
+                          </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestBlackTemple.html" name="" title="QuestBlackTemple">QuestBlackTemple</a>
                           </li>
