deploy: 7744c726bc3a6cfbb39a39f5916155efd5a4e501

--- a/api-source/WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.html
+++ b/api-source/WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.html
@@ -94,7 +94,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_ArtifactBehaviour_EyeOfSargerasMissile__ctor_unit_unit_item_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.%23ctor(unit%2Cunit%2Citem)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/ArtifactBehaviour/EyeOfSargerasMissile.cs/#L18">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/ArtifactBehaviour/EyeOfSargerasMissile.cs/#L19">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_ArtifactBehaviour_EyeOfSargerasMissile__ctor_" data-uid="WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.#ctor*"></a>
   <h4 id="WarcraftLegacies_Source_ArtifactBehaviour_EyeOfSargerasMissile__ctor_unit_unit_item_" data-uid="WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.#ctor(unit,unit,item)">EyeOfSargerasMissile(unit, unit, item)</h4>
@@ -136,10 +136,25 @@
   </h3>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_ArtifactBehaviour_EyeOfSargerasMissile_OnDispose.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.OnDispose%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+  </span>
+  <span class="small pull-right mobile-hide">
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/ArtifactBehaviour/EyeOfSargerasMissile.cs/#L53">View Source</a>
+  </span>
+  <a id="WarcraftLegacies_Source_ArtifactBehaviour_EyeOfSargerasMissile_OnDispose_" data-uid="WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.OnDispose*"></a>
+  <h4 id="WarcraftLegacies_Source_ArtifactBehaviour_EyeOfSargerasMissile_OnDispose" data-uid="WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.OnDispose">OnDispose()</h4>
+  <div class="markdown level1 summary"></div>
+  <div class="markdown level1 conceptual"></div>
+  <h5 class="decalaration">Declaration</h5>
+  <div class="codewrapper">
+    <pre><code class="lang-csharp hljs">public override void OnDispose()</code></pre>
+  </div>
+  <span class="small pull-right mobile-hide">
+    <span class="divider">|</span>
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_ArtifactBehaviour_EyeOfSargerasMissile_OnImpact.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.OnImpact%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/ArtifactBehaviour/EyeOfSargerasMissile.cs/#L32">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/ArtifactBehaviour/EyeOfSargerasMissile.cs/#L33">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_ArtifactBehaviour_EyeOfSargerasMissile_OnImpact_" data-uid="WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.OnImpact*"></a>
   <h4 id="WarcraftLegacies_Source_ArtifactBehaviour_EyeOfSargerasMissile_OnImpact" data-uid="WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.OnImpact">OnImpact()</h4>
