deploy: 5e778024c6084706f86fa94ce162358f9f8ac990

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1100,6 +1100,9 @@
                               <a href="WarcraftLegacies.Source.Setup.Legends.LegendGoblin.html" name="" title="LegendGoblin">LegendGoblin</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.Legends.LegendIllidan.html" name="" title="LegendIllidan">LegendIllidan</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Legends.LegendIronforge.html" name="" title="LegendIronforge">LegendIronforge</a>
                           </li>
                           <li>
@@ -1110,9 +1113,6 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Legends.LegendLordaeron.html" name="" title="LegendLordaeron">LegendLordaeron</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Setup.Legends.LegendNaga.html" name="" title="LegendNaga">LegendNaga</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Legends.LegendNeutral.html" name="" title="LegendNeutral">LegendNeutral</a>
