--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -466,6 +466,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Fel_Horde.QuestBlackrock.html" name="" title="QuestBlackrock">QuestBlackrock</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortal.html" name="" title="QuestDarkPortal">QuestDarkPortal</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Fel_Horde.QuestFelHordeKillIronforge.html" name="" title="QuestFelHordeKillIronforge">QuestFelHordeKillIronforge</a>
                           </li>
                           <li>
