deploy: 7ea3f0eb74767fbf80c4629da357f809dafe73f4

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -845,6 +845,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Researches.PowerResearch.html" name="" title="PowerResearch">PowerResearch</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Researches.Revenants.html" name="" title="Revenants">Revenants</a>
                           </li>
                           <li>
