deploy: eef1ee1e67b078908bcf36dc183412f85341073c

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -304,6 +304,9 @@
                               <a href="MacroTools.Cheats.CheatResearchLevel.html" name="" title="CheatResearchLevel">CheatResearchLevel</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Cheats.CheatShore.html" name="" title="CheatShore">CheatShore</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Cheats.CheatShowQuestNames.html" name="" title="CheatShowQuestNames">CheatShowQuestNames</a>
                           </li>
                           <li>
