deploy: 11c9eba49adf1415d601e3ca854085acfaead574

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -182,6 +182,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.GameLogic.SummonRallyPoints.html" name="" title="SummonRallyPoints">SummonRallyPoints</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.GameLogic.TagSummonedUnits.html" name="" title="TagSummonedUnits">TagSummonedUnits</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
