deploy: 59efdc2bc1d9c45aa9f3d74320ad72b33d7d2356

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -435,6 +435,9 @@
                               <a href="MacroTools.Extensions.PlayerExtensions.html" name="" title="PlayerExtensions">PlayerExtensions</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Extensions.PointExtensions.html" name="" title="PointExtensions">PointExtensions</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Extensions.RectangleExtensions.html" name="" title="RectangleExtensions">RectangleExtensions</a>
                           </li>
                           <li>
