--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -578,6 +578,9 @@
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.html" name="" title="QuestEliminatePiracy">QuestEliminatePiracy</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.html" name="" title="QuestOldBattlefield">QuestOldBattlefield</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html" name="" title="QuestTheramore">QuestTheramore</a>
                           </li>
                           <li>
@@ -675,6 +678,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html" name="" title="QuestRegroupCastaway">QuestRegroupCastaway</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html" name="" title="QuestSkullOfGuldan">QuestSkullOfGuldan</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestStranglethornOutpost.html" name="" title="QuestStranglethornOutpost">QuestStranglethornOutpost</a>
