deploy: 548bd822a72ab0e702046806cfdc0b0ac599647a

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -671,6 +671,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestEyeofSargeras.html" name="" title="QuestEyeofSargeras">QuestEyeofSargeras</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestFlameAndSorrow.html" name="" title="QuestFlameAndSorrow">QuestFlameAndSorrow</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestLostOnes.html" name="" title="QuestLostOnes">QuestLostOnes</a>
                           </li>
                           <li>
@@ -678,9 +681,6 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html" name="" title="QuestRegroupCastaway">QuestRegroupCastaway</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html" name="" title="QuestSkullOfGuldan">QuestSkullOfGuldan</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestStranglethornOutpost.html" name="" title="QuestStranglethornOutpost">QuestStranglethornOutpost</a>
