--- a/api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.html
+++ b/api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.html
@@ -73,8 +73,7 @@
   
   <h1 id="WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy" class="text-break">Class QuestEliminatePiracy
   </h1>
-  <div class="markdown level0 summary"><p>Various control points must be captured.</p>
-</div>
+  <div class="markdown level0 summary"></div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -116,7 +115,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy__ctor_Rectangle_MacroTools_LegendSystem_LegendaryHero_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.%23ctor(Rectangle%2CMacroTools.LegendSystem.LegendaryHero)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestEliminatePiracy.cs/#L27">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestEliminatePiracy.cs/#L25">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy__ctor_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.#ctor*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy__ctor_Rectangle_MacroTools_LegendSystem_LegendaryHero_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.#ctor(Rectangle,MacroTools.LegendSystem.LegendaryHero)">QuestEliminatePiracy(Rectangle, LegendaryHero)</h4>
@@ -156,7 +155,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy_RewardDescription.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.RewardDescription%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestEliminatePiracy.cs/#L46">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestEliminatePiracy.cs/#L44">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy_RewardDescription_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.RewardDescription*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy_RewardDescription" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.RewardDescription">RewardDescription</h4>
@@ -188,7 +187,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy_RewardFlavour.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.RewardFlavour%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestEliminatePiracy.cs/#L42">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestEliminatePiracy.cs/#L40">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy_RewardFlavour_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.RewardFlavour*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy_RewardFlavour" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.RewardFlavour">RewardFlavour</h4>
@@ -222,7 +221,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy_OnComplete_MacroTools_FactionSystem_Faction_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.OnComplete(MacroTools.FactionSystem.Faction)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestEliminatePiracy.cs/#L49">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestEliminatePiracy.cs/#L47">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy_OnComplete_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.OnComplete*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy_OnComplete_MacroTools_FactionSystem_Faction_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.OnComplete(MacroTools.FactionSystem.Faction)">OnComplete(Faction)</h4>
@@ -260,7 +259,7 @@
                     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestEliminatePiracy.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestEliminatePiracy.cs/#L19" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestEliminatePiracy.cs/#L17" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
