--- a/api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.html
+++ b/api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.html
@@ -73,8 +73,7 @@
   
   <h1 id="WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield" class="text-break">Class QuestOldBattlefield
   </h1>
-  <div class="markdown level0 summary"><p>Varuious Fel Horde buildings must be destroyed or controlled to unlock Fusillier.</p>
-</div>
+  <div class="markdown level0 summary"></div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -116,7 +115,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield__ctor_MacroTools_LegendSystem_LegendaryHero_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.%23ctor(MacroTools.LegendSystem.LegendaryHero)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestOldBattlefield.cs/#L19">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestOldBattlefield.cs/#L16">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield__ctor_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.#ctor*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield__ctor_MacroTools_LegendSystem_LegendaryHero_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.#ctor(MacroTools.LegendSystem.LegendaryHero)">QuestOldBattlefield(LegendaryHero)</h4>
@@ -151,7 +150,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield_RewardDescription.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.RewardDescription%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestOldBattlefield.cs/#L31">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestOldBattlefield.cs/#L28">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield_RewardDescription_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.RewardDescription*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield_RewardDescription" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.RewardDescription">RewardDescription</h4>
@@ -183,7 +182,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield_RewardFlavour.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.RewardFlavour%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestOldBattlefield.cs/#L28">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestOldBattlefield.cs/#L25">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield_RewardFlavour_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.RewardFlavour*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield_RewardFlavour" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.RewardFlavour">RewardFlavour</h4>
@@ -217,7 +216,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield_OnComplete_MacroTools_FactionSystem_Faction_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.OnComplete(MacroTools.FactionSystem.Faction)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestOldBattlefield.cs/#L34">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestOldBattlefield.cs/#L31">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield_OnComplete_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.OnComplete*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield_OnComplete_MacroTools_FactionSystem_Faction_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.OnComplete(MacroTools.FactionSystem.Faction)">OnComplete(Faction)</h4>
@@ -255,7 +254,7 @@
                     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestOldBattlefield.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestOldBattlefield.cs/#L13" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestOldBattlefield.cs/#L10" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
