deploy: 1d773387555f964b51aec37ca5d398ee0490fe13

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -575,10 +575,10 @@
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestBoralus.html" name="" title="QuestBoralus">QuestBoralus</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestEliminatePiracy.html" name="" title="QuestEliminatePiracy">QuestEliminatePiracy</a>
+                              <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestHighBank.html" name="" title="QuestHighBank">QuestHighBank</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestOldBattlefield.html" name="" title="QuestOldBattlefield">QuestOldBattlefield</a>
+                              <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestOldHatreds.html" name="" title="QuestOldHatreds">QuestOldHatreds</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html" name="" title="QuestTheramore">QuestTheramore</a>
