deploy: 52684a75d887c1ff9df65cafa078441fcd42ec24

--- a/api-source/WarcraftLegacies.Source.Mechanics.Goblins.OilUserBuff.html
+++ b/api-source/WarcraftLegacies.Source.Mechanics.Goblins.OilUserBuff.html
@@ -85,7 +85,7 @@
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_Mechanics_Goblins_OilUserBuff_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class OilUserBuff : PassiveBuff</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class OilUserBuff : PassiveBuff</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
