--- a/api-source/WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html
+++ b/api-source/WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html
@@ -107,7 +107,7 @@
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class QuestDimensionalShip : QuestData</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class QuestDimensionalShip : QuestData</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
