--- a/api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairExodarHull.html
+++ b/api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairExodarHull.html
@@ -104,7 +104,7 @@
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_Quests_Draenei_QuestRepairExodarHull_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class QuestRepairExodarHull : QuestData</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class QuestRepairExodarHull : QuestData</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
