--- a/api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.html
+++ b/api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.html
@@ -107,7 +107,7 @@
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_Quests_Fel_Horde_QuestRebuildBlackTemple_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class QuestRebuildBlackTemple : QuestData</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class QuestRebuildBlackTemple : QuestData</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
