deploy: e5186324297cf0b6ec26a5df75c3f8abe7e4bb0e

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -259,6 +259,9 @@
                               <a href="MacroTools.Cheats.CheatControl.html" name="" title="CheatControl">CheatControl</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Cheats.CheatDestroy.html" name="" title="CheatDestroy">CheatDestroy</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Cheats.CheatFaction.html" name="" title="CheatFaction">CheatFaction</a>
                           </li>
                           <li>
@@ -295,6 +298,9 @@
                               <a href="MacroTools.Cheats.CheatOwner.html" name="" title="CheatOwner">CheatOwner</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Cheats.CheatPosition.html" name="" title="CheatPosition">CheatPosition</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Cheats.CheatQuestProgress.html" name="" title="CheatQuestProgress">CheatQuestProgress</a>
                           </li>
                           <li>
@@ -304,6 +310,9 @@
                               <a href="MacroTools.Cheats.CheatResearchLevel.html" name="" title="CheatResearchLevel">CheatResearchLevel</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Cheats.CheatSetResearchLevel.html" name="" title="CheatSetResearchLevel">CheatSetResearchLevel</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Cheats.CheatShore.html" name="" title="CheatShore">CheatShore</a>
                           </li>
                           <li>
@@ -311,6 +320,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatSpawn.html" name="" title="CheatSpawn">CheatSpawn</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Cheats.CheatTeam.html" name="" title="CheatTeam">CheatTeam</a>
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatTele.html" name="" title="CheatTele">CheatTele</a>
@@ -323,15 +335,6 @@
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatVision.html" name="" title="CheatVision">CheatVision</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Cheats.CommandDestroy.html" name="" title="CommandDestroy">CommandDestroy</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Cheats.CommandSetResearchLevel.html" name="" title="CommandSetResearchLevel">CommandSetResearchLevel</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Cheats.CommandTeam.html" name="" title="CommandTeam">CommandTeam</a>
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.TestMode.html" name="" title="TestMode">TestMode</a>
