deploy: 342a39ea06033d33a1ef41f2ca4e071c2536ed34

--- a/api-macroTools/MacroTools.UnitType.html
+++ b/api-macroTools/MacroTools.UnitType.html
@@ -258,7 +258,7 @@
   </span>
   <a id="MacroTools_UnitType_Meta_" data-uid="MacroTools.UnitType.Meta*"></a>
   <h4 id="MacroTools_UnitType_Meta" data-uid="MacroTools.UnitType.Meta">Meta</h4>
-  <div class="markdown level1 summary"><p>Whether or not the unit should be deleted without refund when the player leaves.</p>
+  <div class="markdown level1 summary"><p>If true, this unit should never be deleted.</p>
 </div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
