deploy: ca6b49ea183b728e9d947bac6a2d7f2036c5b435

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -484,7 +484,7 @@
                               <a href="WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.html" name="" title="QuestHellfireCitadel">QuestHellfireCitadel</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRebuildBlackTemple.html" name="" title="QuestRebuildBlackTemple">QuestRebuildBlackTemple</a>
+                              <a href="WarcraftLegacies.Source.Quests.Fel_Horde.QuestRuinsofShadowmoon.html" name="" title="QuestRuinsofShadowmoon">QuestRuinsofShadowmoon</a>
                           </li>
                     </ul>
                 </li>
