deploy: ed89c1f3a8784bb01af300141e6164f77ee36592

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -715,6 +715,9 @@
                           <li>
                               <a href="MacroTools.ObjectiveSystem.Objectives.ControlPointBased.ObjectiveControlPoint.html" name="" title="ObjectiveControlPoint">ObjectiveControlPoint</a>
                           </li>
+                          <li>
+                              <a href="MacroTools.ObjectiveSystem.Objectives.ControlPointBased.ObjectiveControlPoints.html" name="" title="ObjectiveControlPoints">ObjectiveControlPoints</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
