--- a/api-macroTools/MacroTools.FactionSystem.Faction.html
+++ b/api-macroTools/MacroTools.FactionSystem.Faction.html
@@ -1325,6 +1325,23 @@ When the Faction leaves the game, all of their goldmines are removed.</p>
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_FactionSystem_Faction_Leave.md&amp;value=---%0Auid%3A%20MacroTools.FactionSystem.Faction.Leave%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+  </span>
+  <span class="small pull-right mobile-hide">
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/FactionSystem/Faction.cs/#L681">View Source</a>
+  </span>
+  <a id="MacroTools_FactionSystem_Faction_Leave_" data-uid="MacroTools.FactionSystem.Faction.Leave*"></a>
+  <h4 id="MacroTools_FactionSystem_Faction_Leave" data-uid="MacroTools.FactionSystem.Faction.Leave">Leave()</h4>
+  <div class="markdown level1 summary"><p>This should get used any time a player exits the game without being defeated;
+IE they left, went afk, became an observer, or triggered an event that causes this.</p>
+</div>
+  <div class="markdown level1 conceptual"></div>
+  <h5 class="decalaration">Declaration</h5>
+  <div class="codewrapper">
+    <pre><code class="lang-csharp hljs">public void Leave()</code></pre>
+  </div>
+  <span class="small pull-right mobile-hide">
+    <span class="divider">|</span>
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_FactionSystem_Faction_ModAbilityAvailability_System_Int32_System_Int32_.md&amp;value=---%0Auid%3A%20MacroTools.FactionSystem.Faction.ModAbilityAvailability(System.Int32%2CSystem.Int32)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
