--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -344,6 +344,9 @@
                               <a href="WarcraftLegacies.Source.Quests.QuestBookOfMedivh.html" name="" title="QuestBookOfMedivh">QuestBookOfMedivh</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.QuestDragonsOfNightmare.html" name="" title="QuestDragonsOfNightmare">QuestDragonsOfNightmare</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.QuestRagnaros.html" name="" title="QuestRagnaros">QuestRagnaros</a>
                           </li>
                           <li>
