deploy: 033f783d9b2f5d1ab5903abaa1a32d61d9bac010

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -875,6 +875,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Warsong.QuestJergosh.html" name="" title="QuestJergosh">QuestJergosh</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Warsong.QuestLumberCamp.html" name="" title="QuestLumberCamp">QuestLumberCamp</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Warsong.QuestMoreWyverns.html" name="" title="QuestMoreWyverns">QuestMoreWyverns</a>
                           </li>
                           <li>
