deploy: 243e7b0534a6967e57a69bea2dcb81ec356aff6d

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -446,7 +446,13 @@
                               <a href="WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.html" name="" title="QuestMalfurionAwakens">QuestMalfurionAwakens</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html" name="" title="QuestRiseBase">QuestRiseBase</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Druids.QuestShaladrassil.html" name="" title="QuestShaladrassil">QuestShaladrassil</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html" name="" title="QuestShrineBase">QuestShrineBase</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Druids.QuestTortolla.html" name="" title="QuestTortolla">QuestTortolla</a>
