deploy: b69721ca3cacca0061b9ac0d5cb7c3ad33d51399

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -527,6 +527,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestFreeNerzhul.html" name="" title="QuestFreeNerzhul">QuestFreeNerzhul</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestScepterOfTheQueenWarsong.html" name="" title="QuestScepterOfTheQueenWarsong">QuestScepterOfTheQueenWarsong</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html" name="" title="QuestStonemaul">QuestStonemaul</a>
                           </li>
                           <li>
@@ -888,9 +891,6 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Warsong.QuestOrgrimmar.html" name="" title="QuestOrgrimmar">QuestOrgrimmar</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.Warsong.QuestScepterOfTheQueenWarsong.html" name="" title="QuestScepterOfTheQueenWarsong">QuestScepterOfTheQueenWarsong</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Warsong.QuestWarsongHold.html" name="" title="QuestWarsongHold">QuestWarsongHold</a>
