deploy: ae36b36d30d6ebbfbca9719db692eb9cadda7d6c

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1122,6 +1122,9 @@
                               <a href="WarcraftLegacies.Source.Setup.FactionSetup.DruidsSetup.html" name="" title="DruidsSetup">DruidsSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.FactionSetup.FactionNames.html" name="" title="FactionNames">FactionNames</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.FactionSetup.FelHordeSetup.html" name="" title="FelHordeSetup">FelHordeSetup</a>
                           </li>
                           <li>
