--- a/api-source/WarcraftLegacies.Source.Setup.Legends.LegendSentinels.html
+++ b/api-source/WarcraftLegacies.Source.Setup.Legends.LegendSentinels.html
@@ -215,18 +215,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Jarod.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Jarod%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Maiev.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Maiev%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendSentinels.cs/#L16">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendSentinels.cs/#L13">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Jarod_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Jarod*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Jarod" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Jarod">Jarod</h4>
+  <a id="WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Maiev_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Maiev*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Maiev" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Maiev">Maiev</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public LegendaryHero Jarod { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public LegendaryHero Maiev { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -245,18 +245,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Maiev.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Maiev%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Naisha.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Naisha%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendSentinels.cs/#L13">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendSentinels.cs/#L16">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Maiev_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Maiev*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Maiev" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Maiev">Maiev</h4>
+  <a id="WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Naisha_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Naisha*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendSentinels_Naisha" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendSentinels.Naisha">Naisha</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public LegendaryHero Maiev { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public LegendaryHero Naisha { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
