--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -403,9 +403,6 @@
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.Draenei.QuestBrokenOne.html" name="" title="QuestBrokenOne">QuestBrokenOne</a>
-                          </li>
-                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html" name="" title="QuestDimensionalShip">QuestDimensionalShip</a>
                           </li>
                           <li>
@@ -1363,6 +1360,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.ScourgeSpellSetup.html" name="" title="ScourgeSpellSetup">ScourgeSpellSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.SentinelSpellSetup.html" name="" title="SentinelSpellSetup">SentinelSpellSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.StormwindSpellSetup.html" name="" title="StormwindSpellSetup">StormwindSpellSetup</a>
