deploy: 1069c49ddb3b18f6f7b536dad2f1757d64771c40

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -881,7 +881,7 @@
                               <a href="WarcraftLegacies.Source.Quests.Warsong.QuestFountainOfBlood.html" name="" title="QuestFountainOfBlood">QuestFountainOfBlood</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.Warsong.QuestJergosh.html" name="" title="QuestJergosh">QuestJergosh</a>
+                              <a href="WarcraftLegacies.Source.Quests.Warsong.QuestGarrosh.html" name="" title="QuestGarrosh">QuestGarrosh</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Warsong.QuestLumberCamp.html" name="" title="QuestLumberCamp">QuestLumberCamp</a>
