--- a/api-source/WarcraftLegacies.Source.Setup.Legends.LegendWarsong.html
+++ b/api-source/WarcraftLegacies.Source.Setup.Legends.LegendWarsong.html
@@ -154,18 +154,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendWarsong_GromHellscream.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendWarsong.GromHellscream%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Garrosh.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Garrosh%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendWarsong.cs/#L9">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendWarsong.cs/#L12">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_Legends_LegendWarsong_GromHellscream_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendWarsong.GromHellscream*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendWarsong_GromHellscream" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendWarsong.GromHellscream">GromHellscream</h4>
+  <a id="WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Garrosh_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Garrosh*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Garrosh" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Garrosh">Garrosh</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public LegendaryHero GromHellscream { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public LegendaryHero Garrosh { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -184,18 +184,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Jergosh.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Jergosh%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendWarsong_GromHellscream.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendWarsong.GromHellscream%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendWarsong.cs/#L12">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendWarsong.cs/#L9">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Jergosh_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Jergosh*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Jergosh" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Jergosh">Jergosh</h4>
+  <a id="WarcraftLegacies_Source_Setup_Legends_LegendWarsong_GromHellscream_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendWarsong.GromHellscream*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendWarsong_GromHellscream" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendWarsong.GromHellscream">GromHellscream</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public LegendaryHero Jergosh { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public LegendaryHero GromHellscream { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
