deploy: cfcbe986fe6cea60a4e47e11c86cac351ece54a3

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1320,6 +1320,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.DalaranSpellSetup.html" name="" title="DalaranSpellSetup">DalaranSpellSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.DraeneiSpellSetup.html" name="" title="DraeneiSpellSetup">DraeneiSpellSetup</a>
                           </li>
                           <li>
