deploy: 568a1bd1634a5937bbd935be1f7653c1491aa7b8

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -1065,6 +1065,9 @@
                               <a href="MacroTools.Spells.ChannelAnySpell.html" name="" title="ChannelAnySpell">ChannelAnySpell</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Spells.ChannelAnySpellCaster.html" name="" title="ChannelAnySpellCaster">ChannelAnySpellCaster</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Spells.CooldownReset.html" name="" title="CooldownReset">CooldownReset</a>
                           </li>
                           <li>
