deploy: d2258973260e6c0edd250d91d090db9fc2da4fc2

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -331,6 +331,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Powers.PingPower.html" name="" title="PingPower">PingPower</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Powers.ShaladrassilsBlessing.html" name="" title="ShaladrassilsBlessing">ShaladrassilsBlessing</a>
                           </li>
                     </ul>
@@ -774,6 +777,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Scourge.QuestCorruptArthas.html" name="" title="QuestCorruptArthas">QuestCorruptArthas</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Scourge.QuestDestroyStratholme.html" name="" title="QuestDestroyStratholme">QuestDestroyStratholme</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Scourge.QuestDrakUnlock.html" name="" title="QuestDrakUnlock">QuestDrakUnlock</a>
